fixes design issues + pdf icon in red to be more visible

--- a/src/middle-bar/middle-bar.scss
+++ b/src/middle-bar/middle-bar.scss
@@ -186,6 +186,10 @@
   margin-bottom: rem(5px);
 }
 
+.icon--explorer-pdf {
+  fill: $color-red;
+}
+
 .icon--explorer-title {
   width: rem(12px);
   height: rem(12px);
